# indentationGUI

./: .pylintrc  CLAUDE.md  CONTRIBUTING.md  README.md  README_PYPI.md  RecentFiles.txt  Update.note  commit.py  important  requirements.txt  setup.cfg  setup.py
.claude/agent-memory/code-improver/: MEMORY.md  feedback_code_display.md
.claude/agents/: code-improver.md
.github/workflows/: docs.yml  pylint.yml  pypi.yml
docs/: Makefile  SCREENSHOT_WORKFLOW.md  make.bat  requirements.txt
docs/scripts/: generate_analysis_tab_screenshots.py
docs/source/: Classification.md  Creep.md  FAQ.md  FAQ1.rst  FAQ2.rst  FAQ3.rst  FrameCompliance.md  GettingStarted.md  HardnessModulus.md  PopIn.md  TipAreaFunction.md  TipRadius.md  Tutorial1.rst  WorkflowGuide.md  conf.py  index.md  index.rst  robots.txt  sitemap.xml
docs/source/_templates/: layout.html
docs/source/img/: copy-code.js  custom.css
micromechanics-indentationGUI/: __init__.py
micromechanics_indentationGUI/: AnalyseCreep.py  AnalysePopIn.py  CalculateCreepRate.py  CalculateHardnessModulus.py  CalibrateTAF.py  Classification.py  CorrectThermalDrift.py  DialogAbout.ui  DialogAbout_ui.py  DialogError.ui  DialogExport.ui  DialogExport_ui.py  DialogOpen.ui  DialogPathList.ui  DialogPathList_ui.py  DialogSaveAs.ui  DialogTestList.ui  DialogTestList_ui.py  DialogWait.ui  Export.py  FrameStiffness.py  Save_and_Load.py  TipRadius.py  Tools4GUI.py  Tools4LoadingData.py  Tools4analyse.py  Tools4hdf5.py  UpdateNote.txt  WaitingUpgrade_of_micromechanics.py  __init__.py  calibration_iterativeMethod.py  load_depth.py  logo.py  main.py  main_window.ui  main_window_ui.py  organize_smart500_exports.py
micromechanics_indentationGUI/Examples/Example1/: FusedSilica.h5  FusedSilica.xlsx  FusedSilica_tabHE_output.xlsx  example.INgui
micromechanics_indentationGUI/Examples/Example2/: Tungsten_FrameStiffness.h5  Tungsten_TipRadius.h5
micromechanics_indentationGUI/Examples/Example3/: .~FusedSilica_CSM.xlsx  FusedSilica_CSM_tabHE_output.xlsx
micromechanics_indentationGUI/Tools_for_GUI/: draggable_smooth_bars.py  gui_actions.py
micromechanics_indentationGUI/pic/: QRcode_generate.py
