[metadata]
url =https://micromechanics.github.io/
author = Micromechanics Team and Weiguang Yang
author_email = sbrinckm@gmail.com
description = GUI for nanoindentation data
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
install_requires =
    pyside6 ==6.4.2
    numpy
    matplotlib = >= 3.6.3
    micromechanics = >= 1.1.13
    pandas = >=1.4.2
    openpyxl = >= 3.1.1
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = micromechanics_indentationGUI*

[options.package_data]
* = *.py, *.json, *.ttf, *.xlsx

[options.entry_points]
console_scripts =
  micromechanics-indentationGUI = micromechanics_indentationGUI.main:main
